feat: improved code and tests